internal/gatewayapi/testdata/httproute-attaching-to-listener-with-core-backendrefs-diff-zone.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-static
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-ip
        port: 8080
      - group: multicluster.x-k8s.io
        kind: ServiceImport
        name: service-import-ip
        port: 8081
      matches:
      - path:
          value: /1
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-fqdn
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-fqdn
        port: 8080
      - group: multicluster.x-k8s.io
        kind: ServiceImport
        name: service-import-fqdn
        port: 8081
      matches:
      - path:
          value: /2
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-1
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      text:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: false
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          name: httproute/default/httproute-static/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 4.3.2.1
              port: 8080
              zone: a
            - host: 8.7.6.5
              port: 8080
              zone: b
            protocol: HTTP
            weight: 1
          - addressType: IP
            endpoints:
            - host: 1.2.3.4
              port: 8081
              zone: a
            - host: 5.6.7.8
              port: 8081
              zone: b
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        name: httproute/default/httproute-static/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /1
      - destination:
          name: httproute/default/httproute-fqdn/rule/0
          settings:
          - addressType: FQDN
            endpoints:
            - host: bar.foo
              port: 8080
              zone: a
            - host: abc.xyz
              port: 8080
              zone: b
            protocol: HTTP
            weight: 1
          - addressType: FQDN
            endpoints:
            - host: foo.bar
              port: 8081
              zone: a
            - host: xyz.abc
              port: 8081
              zone: b
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        name: httproute/default/httproute-fqdn/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /2
